Rewrites NamedRoutes using builder pattern, and removes named route implementation of replaced and deprecated routes
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>