@@ -16,7 +16,6 @@ import org.opensearch.common.io.stream.StreamInput;
 import org.opensearch.common.io.stream.Writeable;
 import org.opensearch.extensions.action.ExtensionAction;
 import org.opensearch.extensions.action.ExtensionTransportAction;
-import org.opensearch.rest.DeprecatedNamedRoute;
 import org.opensearch.rest.NamedRoute;
 import org.opensearch.rest.RestRequest;
 import org.opensearch.extensions.rest.RestSendToExtensionAction;
@@ -27,6 +26,7 @@ import org.opensearch.test.OpenSearchTestCase;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 import static org.mockito.Mockito.mock;
 
@@ -81,27 +81,8 @@ public class DynamicActionRegistryTests extends OpenSearchTestCase {
     public void testDynamicActionRegistryWithNamedRoutes() {
         RestSendToExtensionAction action = mock(RestSendToExtensionAction.class);
         RestSendToExtensionAction action2 = mock(RestSendToExtensionAction.class);
-        NamedRoute r1 = new NamedRoute(RestRequest.Method.GET, "/foo", "foo");
-        NamedRoute r2 = new NamedRoute(RestRequest.Method.GET, "/bar", "bar");
-
-        DynamicActionRegistry registry = new DynamicActionRegistry();
-        registry.registerDynamicRoute(r1, action);
-        registry.registerDynamicRoute(r2, action2);
-
-        assertTrue(registry.isActionRegistered("foo"));
-        assertTrue(registry.isActionRegistered("bar"));
-
-        registry.unregisterDynamicRoute(r2);
-
-        assertTrue(registry.isActionRegistered("foo"));
-        assertFalse(registry.isActionRegistered("bar"));
-    }
-
-    public void testDynamicActionRegistryWithDeprecatedNamedRoutes() {
-        RestSendToExtensionAction action = mock(RestSendToExtensionAction.class);
-        RestSendToExtensionAction action2 = mock(RestSendToExtensionAction.class);
-        DeprecatedNamedRoute r1 = new DeprecatedNamedRoute(RestRequest.Method.GET, "/foo", "Foo is deprecated!", "foo");
-        DeprecatedNamedRoute r2 = new DeprecatedNamedRoute(RestRequest.Method.GET, "/bar", "Bar is deprecated", "bar");
+        NamedRoute r1 = new NamedRoute.Builder().method(RestRequest.Method.GET).path("/foo").uniqueName("foo").build();
+        NamedRoute r2 = new NamedRoute.Builder().method(RestRequest.Method.PUT).path("/bar").uniqueName("bar").build();
 
         DynamicActionRegistry registry = new DynamicActionRegistry();
         registry.registerDynamicRoute(r1, action);
@@ -119,8 +100,16 @@ public class DynamicActionRegistryTests extends OpenSearchTestCase {
     public void testDynamicActionRegistryWithNamedRoutesAndLegacyActionNames() {
         RestSendToExtensionAction action = mock(RestSendToExtensionAction.class);
         RestSendToExtensionAction action2 = mock(RestSendToExtensionAction.class);
-        NamedRoute r1 = new NamedRoute(RestRequest.Method.GET, "/foo", "foo", Collections.singleton("cluster:admin/opensearch/abc/foo"));
-        NamedRoute r2 = new NamedRoute(RestRequest.Method.GET, "/bar", "bar", Collections.singleton("cluster:admin/opensearch/xyz/bar"));
+        NamedRoute r1 = new NamedRoute.Builder().method(RestRequest.Method.GET)
+            .path("/foo")
+            .uniqueName("foo")
+            .legacyActionNames(Set.of("cluster:admin/opensearch/abc/foo"))
+            .build();
+        NamedRoute r2 = new NamedRoute.Builder().method(RestRequest.Method.PUT)
+            .path("/bar")
+            .uniqueName("bar")
+            .legacyActionNames(Set.of("cluster:admin/opensearch/xyz/bar"))
+            .build();
 
         DynamicActionRegistry registry = new DynamicActionRegistry();
         registry.registerDynamicRoute(r1, action);
